@@ -387,6 +387,10 @@ ENERGY_SAVING_INTERNAL="no"
 #ENERGY_SAVING_NODE_MANAGER_SLEEP_CMD="/etc/oar/shut_down_nodes.sh"
 
 # Timeout to consider a node broken (suspected) if it has not woken up
+# The value can be an integer of seconds or a set of pairs.
+# For example, "1:500 11:1000 21:2000" will produce a timeout of 500
+# seconds if 1 to 10 nodes have to wakeup, 1000 seconds if 11 t 20 nodes
+# have to wake up and 2000 seconds otherwise.
 #ENERGY_SAVING_NODE_MANAGER_WAKEUP_TIMEOUT="900"
 
 # You can set up a number of nodes that must always be on. You can use the 
@@ -405,6 +409,12 @@ ENERGY_SAVING_INTERNAL="no"
 # This mechanism is used in order to sleep and wake up nodes gradually.
 # Window size minimum is 1
 #ENERGY_SAVING_WINDOW_SIZE="25"
+
+# Parameter to bypas the window mechanism embedded in the energy saving module.
+# Possible values are "yes" and "no"
+# When set to "yes", the list of nodes to wake up or shut down is passed to 
+# ENERGY_SAVING_NODE_MANAGER_*_CMD through stdin. 
+#ENERGY_SAVING_WINDOW_FORKER_BYPASS="no"
 
 # Time in second between execution of each window.
 # Minimum is 0 to set no delay between each window.
@@ -495,6 +505,8 @@ OARSH_OPENSSH_DEFAULT_OPTIONS="-oProxyCommand=none -oPermitLocalCommand=no"
 
 #DESKTOP_COMPUTING_ALLOW_CREATE_NODE="0"
 #DESKTOP_COMPUTING_EXPIRY="300"
+
+# Remember to create these directories and give ownership to the oar user!
 #STAGEOUT_DIR="/var/lib/oar/stageouts/"
 #STAGEIN_DIR="/var/lib/oar/stageins"
 #STAGEIN_CACHE_EXPIRY="144"
